GAE can now load config from GCS

--- a/pr121 - S2 GAE/src/main/webapp/index.html
+++ b/pr121 - S2 GAE/src/main/webapp/index.html
@@ -19,7 +19,10 @@
         <td><a href='/ui'>User Interface</a> <i>(top page, shows status)</i></td>
       </tr>
       <tr>
-        <td>&nbsp;&nbsp;&nbsp;<a href='/ui/map'>UI - Map</a></td>
+        <td>&nbsp;&nbsp;&nbsp;<a href='/ui/map'>UI - Internal Document Map</a></td>
+      </tr>
+      <tr>
+        <td>&nbsp;&nbsp;&nbsp;<a href='/ui/gcs'>UI - Google Cloud Storage Listing</a></td>
       </tr>
       <tr>
         <td>&nbsp;&nbsp;&nbsp;</td>
